# JackMeterApp

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  ppm_meter  ppm_simulator  ppm_simulator.cpp  ppm_terminal  teste.cpp  wavelet.cpp  wavelet_gen  wavelet_gen.cpp  your_program
.cache/clangd/index/: AppContext.cpp.148F06D6E94D2BD4.idx  AppContext.hpp.DBD3093F0EA497EE.idx  AppContextSingleton.hpp.4CDF99A12CBFBF22.idx  CommandInvoker.cpp.C5A6BA4297759D82.idx  CommandInvoker.hpp.BF121F36A6209DDA.idx  Commands.cpp.EDEB404E13909D86.idx  Commands.hpp.7FE8245CEC4F0D49.idx  Config.hpp.B88DD603432DE3DC.idx  DiscontinuityDetector.cpp.43E5AE99863B10F0.idx  DiscontinuityDetector.hpp.540B68CDF8B5612C.idx  FFTProcessor.cpp.5FDC49FF4D0AC2CC.idx  FFTProcessor.hpp.5A59C9D5793CA202.idx  GnuplotHandler.cpp.830F6732E0418D93.idx  GnuplotHandler.hpp.FA17CFE4BEA17002.idx  IProcessor.hpp.11417FB52AA342CE.idx  JackClient.cpp.07150FF0F9EF6877.idx  JackClient.hpp.7B26607825D06943.idx  MyApp.cpp.30B85ABC3A6A6B46.idx  MyApp.cpp.76A7D3A15500B506.idx  MyApp.hpp.7C3DDBB2C9DB5F38.idx  MyApp.hpp.F8865E50F8069AA8.idx  MyFrame.cpp.0E6E6512CA702892.idx  MyFrame.cpp.94A20BF30E280575.idx  MyFrame.hpp.449F49190FA5EA5A.idx  MyFrame.hpp.970816D28D07E39B.idx  NcursesHandler.cpp.E943FEA0C95760B2.idx  NcursesHandler.hpp.C7C246D09E7941BA.idx  SignalHandler.cpp.9C002E6A8D7A9517.idx  SignalHandler.hpp.6F9C204B1D745ADA.idx  SimplePeakProcessor.cpp.0BF8253D427C7B6C.idx  SimplePeakProcessor.hpp.C7DF7C7EF99B2EEC.idx  Utils.cpp.9AF1B5AF376DA732.idx  Utils.hpp.D4AC391ACDD65D86.idx  main.cpp.BBFB025AE5E710EB.idx  test_FFTProcessor.cpp.18194C67B10CA524.idx  test_command.cpp.216A2E882A2EC458.idx  test_discontinuity_processor.cpp.148094E8B38A9BAC.idx  test_jackclient.cpp.EB3174CF18D4DF9F.idx  test_main.cpp.0BA67A86DD6C5AD9.idx  test_simple_peak_processor.cpp.A92A5569F9488F67.idx
include/: AppContext.hpp  AppContextSingleton.hpp  CommandInvoker.hpp  Commands.hpp  Config.hpp  DiscontinuityDetector.hpp  FFTProcessor.hpp  GnuplotHandler.hpp  IProcessor.hpp  JackClient.hpp  MyFrame.hpp  NcursesHandler.hpp  SignalHandler.hpp  SimplePeakProcessor.hpp  Utils.hpp
src/: AppContext.cpp  CommandInvoker.cpp  Commands.cpp  DiscontinuityDetector.cpp  FFTProcessor.cpp  GnuplotHandler.cpp  JackClient.cpp  JackMeter.cpp  MyApp.cpp  MyFrame.cpp  NcursesHandler.cpp  SignalHandler.cpp  SimplePeakProcessor.cpp  Utils.cpp
tests/: test_FFTProcessor.cpp  test_command.cpp  test_discontinuity_processor.cpp  test_integration.cpp  test_jackclient.cpp  test_simple_peak_processor.cpp
wavfiles/: generate.py  generate_varios.py
wavfiles/myenv/: pyvenv.cfg
